--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@langchain/community": "file:../langchainjs/libs/langchain-community/langchain-community-1.0.1.tgz",
+    "@langchain/core": "^1.0.2",
+    "@langchain/openai": "^1.0.0",
     "dotenv": "^17.2.3",
     "openai": "^6.6.0"
   }
